package model;

public enum TipoUsuario {
    ADMINISTRADOR,
    COORDINADOR,
    PASAJERO
}
