package org.example.busesApp;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class PlaneacionBusesApp {
    public static void main(String[] args) {
        SpringApplication.run(PlaneacionBusesApp.class, args);
    }
}
