@startuml
interface org.example.busesApp.repository.RutaRepository {
}
class org.example.busesApp.model.Ruta {
- Long id
- int codigo
- String horarios
+ int getCodigo()
+ void setCodigo(int)
+ String getHorarios()
+ void setHorarios(String)
}
class org.example.busesApp.model.Usuario {
- Long id
- TipoUsuario rol
- String nombres
- String apellidos
- Integer cedula
+ TipoUsuario getRol()
+ void setRol(TipoUsuario)
+ String getNombres()
+ void setNombres(String)
+ String getApellidos()
+ void setApellidos(String)
+ Integer getCedula()
+ void setCedula(Integer)
}
interface org.example.busesApp.repository.BusRepository {
}
class org.example.busesApp.service.ConductorService {
- ConductorRepository conductorRepository
+ List<Conductor> listarConductores()
}
enum org.example.busesApp.model.TipoUsuario {
+  ADMINISTRADOR
+  COORDINADOR
+  PASAJERO
}
interface org.example.busesApp.repository.ConductorRepository {
}
class org.example.busesApp.PlaneacionBusesApp {
+ {static} void main(String[])
}
class org.example.busesApp.controller.BusController {
- ArrayList<Bus> buses
- BusService busService
+ String listarPersonas(Model)
}
interface org.example.busesApp.repository.HorarioRepository {
}
enum org.example.busesApp.model.DiasSemana {
+  LUNES
+  MARTES
+  MIERCOLES
+  JUEVES
+  VIERNES
+  SABADO
+  DOMINGO
}
class org.example.busesApp.controller.HorarioController {
}
class org.example.busesApp.controller.RutaController {
- ArrayList<Ruta> rutas
}
class org.example.busesApp.model.Conductor {
- Long id
~ String nombre
~ int cedula
~ int telefono
~ String direccion
+ String getNombre()
+ void setNombre(String)
+ int getCedula()
+ void setCedula(int)
+ int getTelefono()
+ void setTelefono(int)
+ String getDireccion()
+ void setDireccion(String)
}
class org.example.busesApp.model.Horario {
- Long id
- Bus busHorario
- Conductor conductorHorario
- Ruta rutaHorario
~ ArrayList<DiasSemana> diasHorario
- UUID idHorario
- Date horaInicio
- Date horaFin
+ Bus getBusHorario()
+ void setBusHorario(Bus)
+ Conductor getConductorHorario()
+ void setConductorHorario(Conductor)
+ Ruta getRutaHorario()
+ void setRutaHorario(Ruta)
}
class org.example.busesApp.service.RutaService {
~ RutaRepository rutaRepository
+ List<Ruta> listarRutas()
}
class org.example.busesApp.controller.ConductorController {
- ArrayList<Conductor> conductores
}
class org.example.busesApp.model.Bus {
- String placa
- Long id
- String modelo
+ String getPlaca()
+ void setPlaca(String)
+ String getModelo()
+ void setModelo(String)
+ void setId(Long)
+ Long getId()
}
class org.example.busesApp.service.BusService {
- BusRepository busRepository
+ List<Bus> listarBuses()
}
class org.example.busesApp.service.HorarioService {
- HorarioRepository horarioRepository
+ List<Horario> getHorarios()
}


org.springframework.data.jpa.repository.JpaRepository <|-- org.example.busesApp.repository.RutaRepository
org.springframework.data.jpa.repository.JpaRepository <|-- org.example.busesApp.repository.BusRepository
org.springframework.data.jpa.repository.JpaRepository <|-- org.example.busesApp.repository.ConductorRepository
org.springframework.data.jpa.repository.JpaRepository <|-- org.example.busesApp.repository.HorarioRepository
@enduml